k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-api-ingress
  namespace: default
  labels:
    io.kompose.service: app-api-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    #nginx.ingress.kubernetes.io/auth-keepalive-timeout: 30
    #nginx.ingress.kubernetes.io/enable-cors: "true"
    #nginx.ingress.kubernetes.io/cors-allow-origin: "mshrm.studio"
    #nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - "*.api.mshrm.studio"
      secretName: api-mshrm-studio-secret
  rules:
  - host: api.mshrm.studio
    http:
      paths:
      - path: /auth(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: mshrm-studio-auth-api
            port:
              number: 8080
      - path: /identity(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: mshrm-studio-auth-web
            port:
              number: 8080
      - path: /aggregator(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: mshrm-studio-api
            port:
              number: 8080
